--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,8 @@
     "eslint": "8.45.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "typescript": "5.0.2",
-    "vite": "4.4.5"
+    "vite": "4.4.5",
+    "vite-plugin-svgr": "4.1.0",
+    "vite-tsconfig-paths": "4.2.1"
   }
 }
