--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "format": "prettier --write .",
+    "lint": "eslint --fix",
+    "start": "vite"
   },
   "dependencies": {
     "i18next": "23.6.0",
@@ -21,9 +23,18 @@
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "eslint": "8.45.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-sort": "2.11.0",
+    "prettier": "3.0.3",
     "typescript": "5.0.2",
     "vite": "4.4.5",
+    "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svgr": "4.1.0",
     "vite-tsconfig-paths": "4.2.1"
   }
