--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,8 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react-swc": "3.3.2",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "typescript": "5.0.2",
     "vite": "4.4.5",
     "vite-plugin-svgr": "4.1.0",
