--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -2,6 +2,6 @@
   "extends": ["@commitlint/config-conventional"],
   "rules": {
     "scope-empty": [2, "never"],
-    "scope-enum": [2, "always", ["common", "web"]]
+    "scope-enum": [2, "always", ["common", "shared", "web"]]
   }
 }
