--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "web",
+  "name": "shared",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
+    "build-storybook": "storybook build",
     "format": "prettier --write .",
     "lint": "eslint --fix",
-    "start": "vite"
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
-    "i18next": "23.6.0",
-    "i18next-http-backend": "2.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-i18next": "13.3.0",
-    "shared": "0.0.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.8.0",
     "@commitlint/config-conventional": "17.8.0",
+    "@storybook/addon-a11y": "7.5.0",
+    "@storybook/addon-actions": "7.5.0",
+    "@storybook/addon-essentials": "7.5.0",
+    "@storybook/addon-interactions": "7.5.0",
+    "@storybook/addon-links": "7.5.0",
+    "@storybook/blocks": "7.5.0",
+    "@storybook/react": "7.5.0",
+    "@storybook/react-vite": "7.5.0",
+    "@storybook/testing-library": "0.2.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.0.0",
@@ -37,6 +42,7 @@
     "husky": "8.0.3",
     "lint-staged": "15.0.1",
     "prettier": "3.0.3",
+    "storybook": "7.5.0",
     "typescript": "5.0.2",
     "vite": "4.4.5",
     "vite-plugin-eslint": "1.8.1",
