--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "6.1.0",
+    "styled-reset": "4.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "17.8.0",
@@ -27,6 +29,7 @@
     "@storybook/testing-library": "0.2.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/styled-components": "5.1.29",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react-swc": "3.3.2",
