--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,13 +15,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "13.3.0",
-    "shared": "0.0.0"
+    "shared": "0.0.0",
+    "styled-components": "6.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.8.0",
     "@commitlint/config-conventional": "17.8.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/styled-components": "5.1.29",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react-swc": "3.3.2",
