--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,9 +6,8 @@
     "build": "nest build",
     "format": "prettier --write",
     "lint": "eslint --fix",
-    "start": "nest start",
+    "start": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:dev": "nest start --watch",
     "start:prod": "node dist/main",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest.e2e.json",
