--- a/packages/api/.env
+++ b/packages/api/.env
@@ -1,1 +1,5 @@
+EVENTSTORE_STREAM=inception
+EVENTSTORE_URI=esdb://eventstore:2113?tls=false
+KEYSTORE_URI=mongodb://mongodb:27017/keystore
 MONGODB_URI=mongodb://localhost/inception
+NODE_ENV=development
