--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@aulasoftwarelibre/nestjs-eventstore": "0.8.0",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.0.0",
