--- a/packages/api/.env
+++ b/packages/api/.env
@@ -1,5 +1,5 @@
 EVENTSTORE_STREAM=inception
-EVENTSTORE_URI=esdb://eventstore:2113?tls=false
-KEYSTORE_URI=mongodb://mongodb:27017/keystore
+EVENTSTORE_URI=esdb://localhost:2113?tls=false
+KEYSTORE_URI=mongodb://localhost/keystore
 MONGODB_URI=mongodb://localhost/inception
 NODE_ENV=development
