--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -18,6 +18,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "target": "ES2021",
     "useDefineForClassFields": true
   }
