--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,7 +28,8 @@
     "mongoose": "7.6.3",
     "nestjs-console": "9.0.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "shallow-equal-object": "1.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
