--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,7 +29,8 @@
     "nestjs-console": "9.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
-    "shallow-equal-object": "1.1.1"
+    "shallow-equal-object": "1.1.1",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
@@ -39,6 +40,7 @@
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
     "@types/supertest": "2.0.12",
+    "@types/uuid": "9.0.6",
     "jest": "29.5.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
