--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,6 +26,7 @@
     "class-validator": "0.14.0",
     "mongoose": "7.6.3",
     "nestjs-console": "9.0.0",
+    "neverthrow": "6.1.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "shallow-equal-object": "1.1.1",
